fix spacing in hero section

--- a/src/Sections/HomeSection.module.scss
+++ b/src/Sections/HomeSection.module.scss
@@ -4,7 +4,7 @@
     text-align: center;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     gap: 6rem;
 }
